RESOLVED FIXED118952
KURL creates duplicate strings when completing data: URIs.
https://bugs.webkit.org/show_bug.cgi?id=118952
Summary KURL creates duplicate strings when completing data: URIs.
Andreas Kling
Reported 2013-07-21 09:02:52 PDT
KURL creates duplicate strings when completing data: URIs.
Attachments
Patch (2.77 KB, patch)
2013-07-21 09:05 PDT, Andreas Kling
no flags
Radar WebKit Bug Importer
Comment 1 2013-07-21 09:03:05 PDT
Andreas Kling
Comment 2 2013-07-21 09:05:48 PDT
WebKit Commit Bot
Comment 3 2013-07-21 12:04:42 PDT
Comment on attachment 207209 [details] Patch Clearing flags on attachment: 207209 Committed r152951: <http://trac.webkit.org/changeset/152951>
WebKit Commit Bot
Comment 4 2013-07-21 12:04:44 PDT
All reviewed patches have been landed. Closing bug.
Roger Fong
Comment 5 2013-07-23 11:56:13 PDT
I think that this may have caused 4 tests to start failing. In particular, http://build-safari.apple.com/results/Cab%20Debug%20Tests/r153057_53185%20(21903)/results.html My guess is just based on looking at regression ranges. There also is a test or two in that set of 4 that involves URL's. Can you take a look? Thanks
Andreas Kling
Comment 6 2013-07-23 12:18:59 PDT
(In reply to comment #5) > I think that this may have caused 4 tests to start failing. > In particular, > http://build-safari.apple.com/results/Cab%20Debug%20Tests/r153057_53185%20(21903)/results.html > > My guess is just based on looking at regression ranges. > There also is a test or two in that set of 4 that involves URL's. > > Can you take a look? Thanks I can repro the failures locally, even with that change reverted :/
Roger Fong
Comment 7 2013-07-23 12:29:20 PDT
(In reply to comment #6) > (In reply to comment #5) > > I think that this may have caused 4 tests to start failing. > > In particular, > > http://build-safari.apple.com/results/Cab%20Debug%20Tests/r153057_53185%20(21903)/results.html > > > > My guess is just based on looking at regression ranges. > > There also is a test or two in that set of 4 that involves URL's. > > > > Can you take a look? Thanks > > I can repro the failures locally, even with that change reverted :/ Humm, nvm then, maybe its one of phil's jsc changes which were also in that area. I'll try reverting dsome of those. thx!
Note You need to log in before you can comment on or make changes to this bug.