KURL creates duplicate strings when completing data: URIs. <http://webkit.org/b/118952> <rdar://problem/14504480>

Reviewed by Anders Carlsson.

Source/WebCore:

When checking if the original URL input string can be reused, compare against the part
of the parsing buffer that we would actually return, not the entire buffer.

632 kB progression on <http://www.nytimes.com/>

Test: KURLTest.KURLDataURIStringSharing

* platform/KURL.cpp:
(WebCore::KURL::parse):

Tools:

* TestWebKitAPI/Tests/WebCore/KURL.cpp:
(TestWebKitAPI::TEST_F):


Canonical link: https://commits.webkit.org/136788@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152951 268f45cc-cd09-0410-ab3c-d52691b4dbfc